# rtic-nrf-modem

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  non_working.rs  working.rs
